load("@prysm//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    testonly = True,
    srcs = ["mock.go"],
    importpath = "github.com/prysmaticlabs/prysm/v5/beacon-chain/operations/attestations/mock",
    visibility = ["//visibility:public"],
    deps = ["//consensus-types/primitives:go_default_library"],
)
